--- a/hal/CMakeLists.txt
+++ b/hal/CMakeLists.txt
@@ -45,6 +45,7 @@ set (libhal_linux_SRCS
  ${CMAKE_CURRENT_LIST_DIR}/time/unix/time.c
  ${CMAKE_CURRENT_LIST_DIR}/serial/linux/serial_port_linux.c
  ${CMAKE_CURRENT_LIST_DIR}/memory/lib_memory.c
+ ${CMAKE_CURRENT_LIST_DIR}/regex/regex.c
 )
 
 set (libhal_windows_SRCS
@@ -54,6 +55,7 @@ set (libhal_windows_SRCS
  ${CMAKE_CURRENT_LIST_DIR}/time/win32/time.c
  ${CMAKE_CURRENT_LIST_DIR}/serial/win32/serial_port_win32.c
  ${CMAKE_CURRENT_LIST_DIR}/memory/lib_memory.c
+ ${CMAKE_CURRENT_LIST_DIR}/regex/regex.c
 )
 
 if(WITH_WPCAP)
@@ -69,6 +71,7 @@ set (libhal_bsd_SRCS
  ${CMAKE_CURRENT_LIST_DIR}/filesystem/linux/file_provider_linux.c
  ${CMAKE_CURRENT_LIST_DIR}/time/unix/time.c
  ${CMAKE_CURRENT_LIST_DIR}/memory/lib_memory.c
+ ${CMAKE_CURRENT_LIST_DIR}/regex/regex.c
 )
 
 set (libhal_macos_SRCS
@@ -78,6 +81,7 @@ set (libhal_macos_SRCS
  ${CMAKE_CURRENT_LIST_DIR}/filesystem/linux/file_provider_linux.c
  ${CMAKE_CURRENT_LIST_DIR}/time/unix/time.c
  ${CMAKE_CURRENT_LIST_DIR}/memory/lib_memory.c
+ ${CMAKE_CURRENT_LIST_DIR}/regex/regex.c
 )
 
 IF(WIN32)
